--- a/COM3D2.PresetLoadCtr.Plugin/COM3D2.MaidFlagCtr.Plugin.csproj
+++ b/COM3D2.PresetLoadCtr.Plugin/COM3D2.MaidFlagCtr.Plugin.csproj
@@ -48,6 +48,9 @@
     <Reference Include="COM3D2.API">
       <HintPath>G:\repos\_lib2\COM3D2.API.dll</HintPath>
     </Reference>
+    <Reference Include="Newtonsoft.Json, Version=13.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.13.0.1\lib\net35\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Drawing" />
@@ -70,6 +73,7 @@
     <Compile Include="MyUtill.cs" />
     <Compile Include="MaidFlagCtr.cs" />
     <Compile Include="MyGUI.cs" />
+    <Compile Include="MyWindowRect.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
@@ -84,6 +88,7 @@
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
+    <None Include="packages.config" />
     <None Include="Resources\icon.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
