--- a/COM3D25.MaidFlagCtr.Plugin/COM3D25.MaidFlagCtr.Plugin.csproj
+++ b/COM3D25.MaidFlagCtr.Plugin/COM3D25.MaidFlagCtr.Plugin.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{4DA1E85A-25F8-45D5-B72F-553D3C973524}</ProjectGuid>
+    <ProjectGuid>{008258BD-944D-42CE-8DFF-2915A7242D36}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>COM3D2.MaidFlagCtr.Plugin</RootNamespace>
-    <AssemblyName>COM3D2.MaidFlagCtr.Plugin</AssemblyName>
+    <AssemblyName>COM3D25.MaidFlagCtr.Plugin</AssemblyName>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
@@ -23,7 +23,6 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <LangVersion>8.0</LangVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -32,26 +31,25 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <LangVersion>8.0</LangVersion>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="0Harmony, Version=2.7.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\HarmonyX.2.7.0\lib\net35\0Harmony.dll</HintPath>
     </Reference>
     <Reference Include="Assembly-CSharp">
-      <HintPath>H:\COM3D2\COM3D2x64_Data\Managed\Assembly-CSharp.dll</HintPath>
+      <HintPath>H:\COM3D2_5\COM3D2x64_Data\Managed\Assembly-CSharp.dll</HintPath>
     </Reference>
     <Reference Include="Assembly-CSharp-firstpass">
-      <HintPath>H:\COM3D2\COM3D2x64_Data\Managed\Assembly-CSharp-firstpass.dll</HintPath>
+      <HintPath>H:\COM3D2_5\COM3D2x64_Data\Managed\Assembly-CSharp-firstpass.dll</HintPath>
     </Reference>
     <Reference Include="BepInEx, Version=5.4.19.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\BepInEx.BaseLib.5.4.19\lib\net35\BepInEx.dll</HintPath>
     </Reference>
     <Reference Include="COM3D2.API">
-      <HintPath>H:\COM3D2\BepinEx\plugins\COM3D2.API.dll</HintPath>
+      <HintPath>H:\COM3D2_5\BepinEx\plugins\COM3D2.API.dll</HintPath>
     </Reference>
-    <Reference Include="COM3D2.WindowRectUtill">
-      <HintPath>H:\COM3D2\BepinEx\plugins\COM3D2.WindowRectUtill.dll</HintPath>
+    <Reference Include="COM3D25.WindowRectUtill">
+      <HintPath>H:\COM3D2_5\BepinEx\plugins\COM3D25.WindowRectUtill.dll</HintPath>
     </Reference>
     <Reference Include="Mono.Cecil, Version=0.10.4.0, Culture=neutral, PublicKeyToken=50cebf1cceb9d05e, processorArchitecture=MSIL">
       <HintPath>..\packages\Mono.Cecil.0.10.4\lib\net35\Mono.Cecil.dll</HintPath>
@@ -73,13 +71,12 @@
     </Reference>
     <Reference Include="Newtonsoft.Json, Version=13.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <HintPath>..\packages\Newtonsoft.Json.13.0.1\lib\net35\Newtonsoft.Json.dll</HintPath>
-      <Private>False</Private>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Drawing" />
     <Reference Include="System.Threading">
-      <HintPath>H:\COM3D2\BepinEx\plugins\System.Threading.dll</HintPath>
+      <HintPath>H:\COM3D2_5\BepinEx\plugins\System.Threading.dll</HintPath>
     </Reference>
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -90,9 +87,15 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="MaidFlagCtrPatch.cs" />
-    <Compile Include="MaidFlagCtr.cs" />
-    <Compile Include="MaidFlagCtrGUI.cs" />
+    <Compile Include="..\COM3D2.PresetLoadCtr.Plugin\MaidFlagCtr.cs">
+      <Link>MaidFlagCtr.cs</Link>
+    </Compile>
+    <Compile Include="..\COM3D2.PresetLoadCtr.Plugin\MaidFlagCtrGUI.cs">
+      <Link>MaidFlagCtrGUI.cs</Link>
+    </Compile>
+    <Compile Include="..\COM3D2.PresetLoadCtr.Plugin\MaidFlagCtrPatch.cs">
+      <Link>MaidFlagCtrPatch.cs</Link>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
@@ -116,8 +119,8 @@
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
-    <PostBuildEvent>copy "$(targetpath)" "h:\COM3D2\BepInEx\plugins" 
-copy "$(targetpath)" "h:\COM3D2-test\BepInEx\plugins"</PostBuildEvent>
+    <PostBuildEvent>copy "$(targetpath)" "h:\COM3D2_5\BepInEx\plugins" 
+copy "$(targetpath)" "h:\COM3D2_5-test\BepInEx\plugins"</PostBuildEvent>
   </PropertyGroup>
   <Import Project="..\packages\BepInEx.Core.5.4.19\build\BepInEx.Core.targets" Condition="Exists('..\packages\BepInEx.Core.5.4.19\build\BepInEx.Core.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
